refactor jpa repos and make the tests work again with paging logic